# alcohol-label-checker

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json
.cursor/skills/study-guide/: SKILL.md
.github/workflows/: ci.yml  deploy-azure-dev.yml  deploy-azure.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_verify.py  routes_ws.py
backend/app/domain/: __init__.py  models.py
backend/app/services/: __init__.py  batch_manager.py  extractor.py  image_preprocess.py  matcher.py  pdf_parser.py  report_builder.py  retention_guard.py
backend/app/services/ocr/: __init__.py  ocr_engine.py  tesseract_engine.py
backend/scripts/: generate_ttb_f510031_pdf_fixtures.py
backend/tests/integration/: test_batch_verify_api.py  test_batch_ws_progress.py  test_fixture_scenarios.py  test_no_disk_write.py  test_single_verify_api.py
backend/tests/unit/: test_batch_manager_retention.py  test_fixture_manifest.py  test_health.py  test_image_preprocess.py  test_matcher.py  test_retention_guard.py
docs/: alcohol-label-checker-prd.md  approach.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  apiClient.ts  index.css  main.tsx
frontend/src/components/: BatchUpload.tsx  (+1 more)
scripts/: azure-create-dev-container-app.sh  azure-github-oidc-add-dev-credential.sh  azure-github-oidc-setup.sh  download_ttb_fixtures.py  generate_adversarial_fixtures.py  generate_manual_test_pdfs.py  generate_synthetic_label_fixtures.py
(+36 files in other folders)
