[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alcohol-label-checker-backend"
version = "0.1.0"
description = "Backend skeleton for Alcohol Label Checker"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=47.0.0",
  "fastapi>=0.111.0",
  "pillow>=10.4.0",
  "pypdf>=6.10.2",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
